--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Wealth Intelligence Network | Web Design Services</title>
   <meta name="description" content="Web design, launch, hosting setup, and SEO basics. Modern mobile-first websites that load fast and convert." />
-<style type="text/css">
-@import url("styles.css");
-</style>
+<link rel="stylesheet" href="css/styles.css?v=2">
+
 </head>
 
 <body>
@@ -475,3 +474,4 @@
   <script src="file:///C|/Users/zdpro/OneDrive/Documents/WIN WEBSITE/css/js/main.js"></script>
 </body>
 </html>
+
